--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-portfolio",
-  "homepage": ".",
+  "homepage": "https://lucerogoga.github.io/my-portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
